--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -22,6 +22,8 @@ jobs:
           #ref: refs/heads/master
     - name: Add Lichess ascii to README
       run: |
+        pwd
+        ls -la
         sudo rm -rf /usr/lib/python3/dist-packages/simplejson
         pip install -r requirements.txt
         cat template/README.md > README.md
