--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -32,7 +32,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898283+github-actions[bot]@users.noreply.github.com"
         # Force add since README is on gitignore
-        git add -f README.ms
+        git add -f README.md
         # Prevent empty add to result in error
         git diff-index --quiet HEAD || git commit -m "Updated README with lichess"
         git push
