--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -31,6 +31,7 @@ jobs:
         python3 lichess_ascii_tracker.py -r Bullet >> ../README.md
         echo "</code>" >> ../README.md
         echo "</pre>" >> ../README.md
+        echo "Lichess stats generated via [lichess-ascii-rating-tracker](https://github.com/cschindlbeck/lichess-ascii-rating-tracker.git)." >> ../README.md
         cd ..
     - name: Push README
       run: |
