--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -1,13 +1,12 @@
 name: Add lichess README
 
-on: [push]
-  #on:
-  #push:
-  #branches: [ "master" ]
-  #pull_request:
-  #branches: [ "master" ]
-  # schedule:
-  #  - cron: "*/10 * * * *"
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+  schedule:
+    - cron: "0 0 1 * *"
 
 env:
   API_TOKEN: ${{ secrets.API_TOKEN }}
