--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -40,4 +40,4 @@ jobs:
         git add -f README.md
         # Prevent empty add to result in error
         git diff-index --quiet HEAD || git commit -m "Updated README with lichess"
-        git push origin $CI_COMMIT_BRANCH
+        git push origin HEAD:$CI_COMMIT_BRANCH
