--- a/.github/workflows/add-lichess.yml
+++ b/.github/workflows/add-lichess.yml
@@ -33,8 +33,10 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898283+github-actions[bot]@users.noreply.github.com"
+          git fetch --all
+          git checkout ${{ github.event.pull_request.head.ref }}
           # Force add since README is on gitignore
           git add -f README.md
           # Prevent empty add to result in error
           git diff-index --quiet HEAD || git commit -m "Updated README with lichess"
-          git push
+          git push origin ${{ github.event.pull_request.head.ref }}
