--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,5 +1,5 @@
 ---
-name: CI
+name: Snake
 on:
   push:
     branches: ["main"]
@@ -8,16 +8,11 @@ on:
   schedule:
     - cron: "0 0 1 * *"
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: Platane/snk@v3
         with:
-          # github user name to read the contribution graph from (**required**)
-          # using action context var `github.repository_owner` or specified user
           github_user_name: ${{ github.repository_owner }}
           # list of files to generate.
           # one file per line. Each output can be customized with options as query string.
